SERVER-12034 Fix bug with SIGXCPU causing a core dump in mongoD/mongoS.

Graceful shutdown was chosen so we can log the signal; There is no risk
of data corruption.

Signed-off-by: Matt Kangas <matt.kangas@mongodb.com>